--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
-version: '3.9'
-
 services:
-  app:
-    build: .
-    container_name: myapp
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "5173:80"
+    container_name: myapp_client
+
+  server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    container_name: myapp_server
 
   nginx:
-    image: nginx:alpine
-    container_name: mynginx
+    image: nginx:stable-alpine
+    container_name: myapp_nginx
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./client/dist:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      - app
+      - client
+      - server
+
