--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
 
     # API → Node
     location /api {
-      proxy_pass http://app:3000;
+      proxy_pass http://server:3000;
     }
   }
 }
