--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,18 @@
 server {
     listen 80;
-    server_name _;
 
-    # Serve frontend build
-    root /var/www/myapp/client/dist;
+    # Serve frontend (React build)
+    root /usr/share/nginx/html;
     index index.html;
 
-    # Frontend routes
+    # React SPA routing fix
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Backend API reverse proxy
+    # Backend API proxy
     location /api/ {
-        proxy_pass http://localhost:3000/;
-        proxy_http_version 1.1;
+        proxy_pass http://server:3000;   # server = docker service name
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
